--- a/great-idea/css/index.css
+++ b/great-idea/css/index.css
@@ -1,8 +1,3 @@
-/* http://meyerweb.com/eric/tools/css/reset/ 
-   v2.0 | 20110126
-   License: none (public domain)
-*/
-
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -28,39 +23,176 @@ article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
 	display: block;
 }
-body {
-	line-height: 1;
-}
-ol, ul {
-	list-style: none;
-}
-blockquote, q {
-	quotes: none;
-}
-blockquote:before, blockquote:after,
-q:before, q:after {
-	content: '';
-	content: none;
-}
-table {
-	border-collapse: collapse;
-	border-spacing: 0;
+.container {
+	max-width: 880px;
+	display: flex;
+	flex-wrap: wrap;
+	margin: 0 auto;
 }
 
-/* Set every element's box-sizing to border-box */
-* {
-    box-sizing: border-box;
+/* Header */
+
+header {
+	display: flex;
 }
 
-html, body {
-    height: 100%;
-    font-family: 'Titillium Web', sans-serif;
+header nav {
+	margin-top: 35px;
+	vertical-align: top;
+	width: 691px;
 }
 
-h1, h2, h3, h4, h5 {
-    font-family: 'Bangers', cursive;
-    letter-spacing: 1px;
-    margin-bottom: 15px;
+header nav a {
+	margin-right: 65px;
+	color: gray;
+	font-size: 14px;
+	text-decoration-line: none;
 }
 
-/* Copy and paste your work from yesterday here and start to refactor into flexbox */
+header nav a:hover {
+	text-decoration: underline;
+}
+
+header nav a:first-child {
+	margin-left: 0;
+}
+
+header nav a:last-child {
+	margin-right: 0;
+}
+
+header .logo {
+	margin-top: 25px;
+}
+
+/* left side text and side image */
+
+.left-side {
+	display: flex;
+	align-items: center;
+}
+
+.left-side .left-side-text {
+	font-size: 77px;
+	margin-top: 120px;
+	padding: 0px 75px;
+	text-align: center;
+}
+
+.left-side .left-side-text button {
+	background: white;
+	padding: 8px 44px;
+	border: 1px solid black;
+	font-size: 17px;
+	margin-top: 6px;
+	cursor: pointer;
+}
+
+.left-side .left-side-text button:hover {
+	background: black;
+	color: white;
+}
+
+/* top-content */
+
+.top-content {
+	border-top: 1px solid black;
+	margin-top: 76px;
+	padding-top: 39px;
+	display: flex;
+}
+
+.top-content .text-box {
+	width: 410px;
+	margin-right: 34px;
+}
+
+.top-content .text-box:last-child {
+	margin-right: 0;
+}
+
+/* middle pic */
+
+.middle-img {
+	margin: 40px 0px;
+}
+
+/* bottom content */
+
+.bottom-content {
+	border-bottom: 1px solid black;
+	margin-bottom: 39px;
+	display: flex;
+	justify-content: space-around;
+}
+
+.bottom-content .text-box {
+	width: 280px;
+	margin-bottom: 39px;
+	margin-right: 10px;
+}
+
+.bottom-content .text-box:last-child {
+	margin-right: 0px;
+}
+
+.contact address p {
+	margin: 10px 0px;
+}
+
+footer {
+	text-align: center;
+	margin: 30px 0;
+	width: 900px;
+}
+
+/* Start of index.html css */
+
+/* top img */
+
+.services-header-img {
+	margin: 30px 0px;
+}
+
+.rows {
+	margin-top: 30px;
+	border-top: 1px solid black;
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: space-between;
+}
+
+.rows .box {
+	border: 1px solid black;
+	background: rgb(240, 240, 240);
+	margin-top: 30px;
+	padding: 15px;
+	width: 420px;
+}
+
+.rows .box button {
+	padding: 10px 40px;
+	margin: 20px 0px 10px 0px;
+	border: 1px solid black;
+	background: white;
+	border-radius: 5px;
+	cursor: pointer;
+}
+
+.rows .box button:hover {
+	background: lightsteelblue;
+	color: white;
+}
+
+.facts {
+	border-top: 1px solid black;
+	margin-top: 30px;
+	padding-top: 30px;
+	display: flex;
+	justify-content: space-between;
+	width: 880px;
+}
+
+.facts .facts-body p {
+	width: 410px;
+}
